# dmsfwk

./: 0519dms_pass.patch  0520dms_pass.patch  CODEOWNERS  README.md  README_zh.md  bundle.json  dmsfwk.gni  et --soft HEAD^  et --soft HEAD^  hisysevent.yaml  ohos.build
common/: BUILD.gn
common/include/: distributed_sched_utils.h  dtbcollabmgr_log.h  dtbschedmgr_log.h  single_instance.h
common/src/: distributed_sched_utils.cpp
common/test/unittest/: BUILD.gn
common/test/unittest/include/: distributed_sched_utils_test.h
common/test/unittest/src/: distributed_sched_utils_test.cpp
frameworks/js/distributed_extension/: BUILD.gn  distributed_extension_ability.js  distributed_extension_module.cpp
frameworks/native/distributed_extension/: BUILD.gn
frameworks/native/distributed_extension/include/: distributed_extension.h  distributed_extension_context.h  distributed_extension_context_js.h  distributed_extension_js.h  distributed_extension_loader.h  distributed_extension_service.h
frameworks/native/distributed_extension/src/: distributed_extension.cpp  distributed_extension_context.cpp  distributed_extension_context_js.cpp  distributed_extension_js.cpp  distributed_extension_loader.cpp  distributed_extension_service.cpp
interfaces/innerkits/distributed_event/: BUILD.gn
interfaces/innerkits/distributed_event/include/: distributed_event_listener.h  distributed_parcel_helper.h  dms_client.h  dms_handler.h  dms_listener_stub.h  dms_sa_client.h  dms_static_capability.h
interfaces/innerkits/distributed_event/src/: dms_client.cpp  dms_handler.cpp  dms_listener_stub.cpp  dms_sa_client.cpp  (+1 more)
interfaces/innerkits/tests/: BUILD.gn  dms_sdk_demo.cpp  dms_sdk_demo.h
services/base/test/: BUILD.gn
services/dtbabilitymgr/: BUILD.gn
services/dtbabilitymgr/include/: distributed_ability_manager_dumper.h  distributed_ability_manager_interface.h  distributed_ability_manager_service.h  distributed_ability_manager_stub.h  dtbabilitymgr_ipc_interface_code.h
services/dtbabilitymgr/src/: distributed_ability_manager_client.cpp  distributed_ability_manager_dumper.cpp  distributed_ability_manager_proxy.cpp  distributed_ability_manager_service.cpp  distributed_ability_manager_stub.cpp
services/dtbabilitymgr/test/: BUILD.gn
services/dtbschedmgr/: BUILD.gn
services/dtbschedmgr/include/: ability_connection_wrapper_stub.h  ability_continue_session.h  app_connection_stub.h  app_state_observer.h  caller_info.h  common_event_listener.h  continue_scene_session_handler.h  datashare_manager.h  distributed_device_node_listener.h  distributed_event_died_listener.h  distributed_radar.h  distributed_sched_ability_shell.h  distributed_sched_adapter.h  distributed_sched_continuation.h  distributed_sched_dumper.h  distributed_sched_interface.h  distributed_sched_permission.h  distributed_sched_proxy.h  distributed_sched_service.h  distributed_sched_stub.h  distributed_ue.h  distributedsched_ipc_interface_code.h  dms_callback_session.h  dms_callback_task.h  dms_free_install_callback.h  dms_free_install_callback_interface.h  dms_free_install_callback_proxy.h  dms_free_install_callback_stub.h  dms_version_manager.h  dtbschedmgr_device_info_storage.h  dtbschedmgr_log.h  form_mgr_death_recipient.h  idms_free_install_callback_interface.h  json_util.h  multi_user_manager.h  parcel_helper.h  svc_distributed_connection.h  switch_status_dependency.h
services/dtbschedmgr/src/: ability_connection_wrapper_proxy.cpp  ability_connection_wrapper_stub.cpp  ability_continue_session.cpp  app_connection_stub.cpp  app_state_observer.cpp  common_event_listener.cpp  continue_scene_session_handler.cpp  datashare_manager.cpp  distributed_device_node_listener.cpp  distributed_event_died_listener.cpp  distributed_radar.cpp  distributed_sched_ability_shell.cpp  distributed_sched_adapter.cpp  distributed_sched_continuation.cpp  distributed_sched_dumper.cpp  distributed_sched_permission.cpp  distributed_sched_proxy.cpp  distributed_sched_service.cpp  distributed_sched_stub.cpp  distributed_ue.cpp  dms_callback_session.cpp  dms_callback_task.cpp  dms_free_install_callback.cpp  dms_free_install_callback_proxy.cpp  dms_free_install_callback_stub.cpp  dms_token_callback.cpp  dms_version_manager.cpp  dtbschedmgr_device_info_storage.cpp  form_mgr_death_recipient.cpp  multi_user_manager.cpp  svc_distributed_connection.cpp  switch_status_dependency.cpp
services/dtbschedmgr/test/: BUILD.gn  cfi_blocklist.txt
test/fuzztest/: BUILD.gn
test/fuzztest/abilityconnectionwrapperstub_fuzzer/: BUILD.gn  abilityconnectionwrapperstub_fuzzer.cpp  abilityconnectionwrapperstub_fuzzer.h
test/fuzztest/bundlemanagercallbackstub_fuzzer/: BUILD.gn  bundlemanagercallbackstub_fuzzer.cpp  bundlemanagercallbackstub_fuzzer.h
test/fuzztest/continuationmanager_fuzzer/: BUILD.gn  continuationmanager_fuzzer.cpp  continuationmanager_fuzzer.h  fuzz_util.cpp  mock_permission.cpp  mock_permission.h
test/fuzztest/distributedschedstub_fuzzer/: BUILD.gn  distributedschedstub_fuzzer.cpp  distributedschedstub_fuzzer.h  fuzz_util.cpp  fuzz_util.h
test/fuzztest/distributedwant_fuzzer/: BUILD.gn  distributedwant_fuzzer.cpp  distributedwant_fuzzer.h
test/fuzztest/distributedwantparams_fuzzer/: BUILD.gn  distributedwantparams_fuzzer.cpp  distributedwantparams_fuzzer.h
test/fuzztest/dmsfreeinstallcallbackstub_fuzzer/: BUILD.gn  dmsfreeinstallcallbackstub_fuzzer.cpp  dmsfreeinstallcallbackstub_fuzzer.h
test/fuzztest/dschedallconnectmanager_fuzzer/: BUILD.gn  dschedallconnectmanager_fuzzer.cpp  dschedallconnectmanager_fuzzer.h
test/fuzztest/dschedsoftbussession_fuzzer/: BUILD.gn  dschedsoftbussession_fuzzer.cpp  dschedsoftbussession_fuzzer.h
test/fuzztest/dschedtransportsoftbusadapter_fuzzer/: BUILD.gn  dschedtransportsoftbusadapter_fuzzer.cpp  dschedtransportsoftbusadapter_fuzzer.h
test/fuzztest/multiusermanager_fuzzer/: BUILD.gn  multiusermanager_fuzzer.cpp  multiusermanager_fuzzer.h
test/fuzztest/softbusadapter_fuzzer/: BUILD.gn  project.xml  softbusadapte_fuzzer.h  softbusadapter_fuzzer.cpp
test/fuzztest/util/: mock_fuzz_util.cpp  mock_fuzz_util.h
(+730 files in other folders)
