# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  dms_path = "//foundation/ability/dmsfwk"
  module_output_path = "dmsfwk/dmsfwk"

  dmsfwk_standard_form_share = true
  dmsfwk_mission_manager = false
  efficiency_manager_service_enable = false
  dmsfwk_report_memmgr = false
  dmsfwk_report_memmgr_plugins = false
  dmsfwk_softbus_adapter_common = true
  dmsfwk_service_disable = false
  dmsfwk_ces_listener = false
  dmsfwk_mmi_listener = false
  dmsfwk_check_bt = false
  dmsfwk_check_wifi = true
  dmsfwk_recv_broadcast = true
  dmsfwk_use_screenlock_icon_holdon = true
  dmsfwk_sync_data_on_package_event = false
  if (defined(global_parts_info)) {
    if (defined(global_parts_info.multimedia_image_framework)) {
      dmsfwk_mission_manager = true
    }
    if (defined(global_parts_info.resourceschedule_efficiency_manager)) {
      efficiency_manager_service_enable = true
    }
    if (defined(global_parts_info.resourceschedule_memmgr)) {
      dmsfwk_report_memmgr = true
    }
    if (defined(global_parts_info.resourceschedule_plugins_memmgr)) {
      dmsfwk_report_memmgr_plugins = true
    }
    if (defined(global_parts_info.notification_common_event_service)) {
      dmsfwk_ces_listener = true
    }
    if (defined(global_parts_info.multimodalinput_input)) {
      dmsfwk_mmi_listener = true
    }
  }
  if (!defined(global_parts_info) ||
      defined(global_parts_info.distributedhardware_device_manager)) {
    token_sync_enable = true
  } else {
    token_sync_enable = false
  }
  if (!defined(global_parts_info) ||
      defined(global_parts_info.account_os_account)) {
    os_account_part = true
  } else {
    os_account_part = false
  }
}
