# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    "abilityconnectionwrapperstub_fuzzer:fuzztest",
    "bundlemanagercallbackstub_fuzzer:fuzztest",
    "continuationmanager_fuzzer:fuzztest",
    "distributedschedstub_fuzzer:fuzztest",
    "distributedwant_fuzzer:fuzztest",
    "distributedwantparams_fuzzer:fuzztest",
    "dmsfreeinstallcallbackstub_fuzzer:fuzztest",
    "dschedallconnectmanager_fuzzer:fuzztest",
    "dschedsoftbussession_fuzzer:fuzztest",
    "dschedtransportsoftbusadapter_fuzzer:fuzztest",
    "softbusadapter_fuzzer:fuzztest",
  ]
}
