# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("../../../dmsfwk.gni")

module_output_path = "dmsfwk/common"

## UnitTest distributed_sched_utils_test
ohos_unittest("DistributedSchedUtilsTest") {
  visibility = [ ":*" ]

  module_out_path = module_output_path

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "${dms_path}/common/test/unittest/include",
    "${dms_path}/common/include",
    "${dms_path}/services/dtbschedmgr/include",
  ]

  sources = [ "src/distributed_sched_utils_test.cpp" ]

  deps = [ "${dms_path}/common:distributed_sched_utils" ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
  ]

  part_name = "dmsfwk"
  subsystem_name = "ability"
}

group("distributed_sched_utils_test") {
  testonly = true
  deps = [ ":DistributedSchedUtilsTest" ]
}
