# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("//foundation/ability/dmsfwk/dmsfwk.gni")

module_output_path = "dmsfwk/distributed_base_svr_test"

distributed_service = "//foundation/ability/dmsfwk/services"

base_configs = [
  "${distributed_service}/base:distributed_sched_config",
]

config("test_config") {
  visibility = [ ":*" ]
  include_dirs = [ "//foundation/ability/dmsfwk/utils/native/include" ]
}

ohos_unittest("dtbschedmgrdeviceinfostoragetest") {
  module_out_path = module_output_path
  sources = [
    "unittest/dtbschedmgr_device_info_storage_test.cpp",
    "${distributed_service}/base/src/adapter/dnetwork_adapter.cpp",
    "${distributed_service}/base/src/deviceManager/dms_device_info.cpp",
    "${distributed_service}/base/src/distributed_device_node_listener.cpp",
    "${distributed_service}/base/src/dtbschedmgr_device_info_storage.cpp",
  ]
  configs = [
    ":test_config",
    "${distributed_service}/dtbschedmgr/test/resource:coverage_flags",
  ]
  configs += base_configs
  external_deps = [
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  part_name = "dmsfwk"
}

group("unittest") {
  testonly = true
  deps = [
    ":dtbschedmgrdeviceinfostoragetest",
  ]
}